# e172_vulkan_impl

./: CMakeLists.txt  README.md  magura.yaml  vulkan_implementation.cmake
src/: graphicsprovider.cpp  graphicsprovider.h  renderer.cpp  renderer.h  vulkangraphicsprovider.cpp  vulkangraphicsprovider.h  vulkanrenderer.cpp  vulkanrenderer.h
src/e172vp/: bootstrapobject.cpp  bootstrapobject.h  font.cpp  font.h  presentationobject.cpp
src/e172vp/graphicsobject/: graphicsobject.h  swapchain.cpp
src/e172vp/tools/: buffer.cpp  hardware.cpp  hardware.h  mesh.cpp  mesh.h
src/e172vp/vertexobjects/: texturedvertexobject.cpp
